--- a/src/main/res/layout/activity_uhfset.xml
+++ b/src/main/res/layout/activity_uhfset.xml
@@ -98,7 +98,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/uhf_title_power"
+                        android:text="test"
                         android:textSize="16sp" />
 
                     <Spinner
