Normalize code styles

--- a/src/main/res/layout/fragment_main.xml
+++ b/src/main/res/layout/fragment_main.xml
@@ -12,14 +12,14 @@
         android:padding="5dp" >
 
         <Button
-            android:id="@+id/BtInventory"
+            android:id="@+id/ToggleButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:background="@drawable/button_bg"
-            android:text="@string/btInventory"
+            android:text="@string/toggleButton"
             android:textColor="@color/white" />
     </LinearLayout>
 
