--- a/src/main/res/layout/main_fragment.xml
+++ b/src/main/res/layout/main_fragment.xml
@@ -4,24 +4,34 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/layout12"
+    <Spinner
+        android:id="@+id/witnessRoles"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp" >
+        android:entries="@array/witness_roles"
+        android:gravity="center_horizontal" />
 
-        <Button
-            android:id="@+id/ToggleButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_bg"
-            android:text="@string/toggleButton"
-            android:textColor="@color/white" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/scanButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_weight="1"
+        android:background="@drawable/button_bg"
+        android:text="@string/toggleButton"
+        android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/connectButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_weight="1"
+        android:background="@drawable/button_bg"
+        android:text="@string/connectButton"
+        android:textColor="@color/white" />
 
     <View
         android:layout_width="match_parent"
