--- a/src/main/res/layout/main_fragment.xml
+++ b/src/main/res/layout/main_fragment.xml
@@ -7,20 +7,9 @@
     <Spinner
         android:id="@+id/witnessRoles"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:entries="@array/witness_roles"
         android:gravity="center_horizontal" />
-
-    <Button
-        android:id="@+id/scanButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_weight="1"
-        android:background="@drawable/button_bg"
-        android:text="@string/toggleButton"
-        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/connectButton"
@@ -32,6 +21,21 @@
         android:background="@drawable/button_bg"
         android:text="@string/connectButton"
         android:textColor="@color/white" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/gray1" />
+
+    <Button
+        android:id="@+id/scanButton"
+        android:layout_width="fill_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_weight="1"
+        android:background="@drawable/button_bg"
+        android:text="@string/toggleButton"
+        android:layout_height="wrap_content" />
 
     <View
         android:layout_width="match_parent"
