--- a/src/main/res/layout/main_fragment.xml
+++ b/src/main/res/layout/main_fragment.xml
@@ -4,6 +4,17 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <EditText
+        android:id="@+id/judgeIpText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/gray1" />
+
     <Spinner
         android:id="@+id/witnessRoles"
         android:layout_width="fill_parent"
